# fourtify

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: FopyFourtifyExamples.ipynb  FourtifyExamples.ipynb
fourtify/: __init__.py  fourtify.py  tbp.py
fourtify/.ipynb_checkpoints/: fourtify-checkpoint.py
