[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fourtify"
version = "0.1.0"
description = "Fourtify finds additional sources along a specified orbit in a transient source dataset."
authors = [{name = "Ben Engebreth", email = "ben.engebreth@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["numpy", "astropy", "pyorb"]

[tool.setuptools]
packages = ["fourtify"]
